# .dotfiles

./: .Xresources  .aliases  .bashrc  .exports  .gitignore  .prettierrc.json  .vimrc  .xinitrc  .zprofile  .zshrc  Brewfile  README.md  arch_init.lua  config.toml  flatpakfile  mise.toml  package.json  pnpm-lock.yaml  pyproject.toml  scheme.yml  setup.bash  setup.sh  theme.yml  yayfile
.config/alacritty/: alacritty.toml  alacritty.yml
.config/awesome/: autorun.sh  client_buttons.lua  client_keys.lua  constants.lua  context_menu.lua  global_keys.lua  rc.lua  restore_wallpaper.lua  rules.lua  theme.lua  workspaces.lua  xrandr.lua
.config/bspwm/: bspwmrc
.config/cava/: config
.config/fish/: config.fish
.config/hypr/: hyprland.conf
.config/i3/: config
.config/picom/: picom.conf
.config/polybar/: config.ini  launch.sh
.config/rofi/: config.rasi
.config/skhd/: skhdrc
.config/sxhkd/: sxhkdrc
.config/vifm/: vifmrc
alacritty/.config/alacritty/: alacritty.toml
cava/.config/cava/: config
fish/.config/fish/: fish_variables
git/: .gitconfig
hyprland/.config/hypr/: hyprland.conf
kitty/.config/kitty/: kitty.conf
polybar/.config/polybar/: launch.sh
scripts/: format.bash.sh  format.lua.sh  format.python.sh
shell/: aliases.bash  exports-Darwin.bash  exports-Linux.bash  exports.bash  exports.fish  prompt.zsh
src/: colors.py  render.py  setup.py
zsh/: aliases  defaults  exports-Darwin  exports-Linux  prompt  secrets
zsh/Darwin/: exports
zsh/Linux/: exports
zsh/Shared/: aliases  defaults  prompt
