[project]
name = "dotfiles"
version = "0.1.0"
description = ""
authors = [
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "jinja2 (>=3.1.6,<4.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]

[tool.poetry]
package-mode = false
